--- a/index.html
+++ b/index.html
@@ -9,36 +9,48 @@
     </head>
     <body>
         <header class="main-header">
-            <nav class="main-navigation">
-                <a class="main-header-logo">Device</a>
-                <p class="user-tools">
-                    <input type="seach" name="seach">
-                    <a href="compare.html">Сравнить</a>
-                    <a href="cart.html">Корзина</a>
-                </p>
-                <ul class="user-navigation">
-                    <li class="user-navigation__login">
-                        <a class="login-link" href="login.html">Войти</a>
-                    </li>
-                </ul>
-                <ul class="site-navigation">
-                    <li>
-                        <a href="catalog.html">Каталог товаров</a>
-                        <button class="catalog-open">Open</button>
-                        <ul class="site-navigation__catalog-list">
-                            <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
-                            <li class="site-navigation__catalog-item"><a href="inner-page.html">Моноподы для селфи</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
+            <div class="main-header__wrapper container">
+                <nav class="main-navigation">
+                    <a class="main-header-logo">Device</a>
+                    <div class="user-tools">
+                        <div class="user-tools__box" >
+                            <form class="user-tools__form" action="https://echo.htmlacademy.ru" method="POST">
+                                <label class="visually-hidden" for="user-seach">Поиск по сайту</label>
+                                <input type="seach" name="seach" id="user-seach" placeholder="Поиск по сайту">
+                                <button class="user-tools__button" type="submit">Найти</button>
+                            </form>
+                        </div>
+                        <ul class="user-navigation">
+                            <li class="user-navigation__login">
+                                <a class="login-link" href="login.html">Войти</a>
+                            </li>
                         </ul>
-                    </li>
-                    <li><a href="#service-delivery">Доставка</a></li>
-                    <li><a href="#service-warranty">Гарантия</a></li>
-                    <li><a href="#contacts">Контакты</a></li>
-                </ul>
-            </nav>
+                        <span class="user-tools__link">
+                            <a class="user-tools__compare" href="compare.html">Сравнить</a>
+                        </span>
+                        <span class="user-tools__link">
+                            <a class="user-tools__cart" href="cart.html">Корзина</a>
+                        </span>
+                    </div>
+                    <ul class="site-navigation">
+                        <li>
+                            <a href="catalog.html">Каталог товаров</a>
+                            <button class="catalog-open" type="button">Open</button>
+                            <ul class="site-navigation__catalog-list">
+                                <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
+                                <li class="site-navigation__catalog-item"><a href="inner-page.html">Моноподы для селфи</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#service-delivery">Доставка</a></li>
+                        <li><a href="#service-warranty">Гарантия</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main class="container">
             <h1 class="visually-hidden">Девайс</h1>
@@ -175,23 +187,25 @@
                     </li>
                 </ul>
             </section>
-            <section class="about-us">
-                <h2 class="about-us__title">О нас</h2>
-                <p class="about-us__text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-                <p class="about-us__text">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-                <ul class="about-us__transport-companies-list">
-                    <li class="about-us__transport-companie-item">Деловые Линии</li>
-                    <li class="about-us__transport-companie-item">Автотрейдинг</li>
-                    <li class="about-us__transport-companie-item">ЖелДорЭкспедиция</li>
-                </ul>
-                <a class="button more-details" href="#">Подробнее о нас</a>
-            </section>
-            <section class="contacts" id="contacts">
-                <h2 class="contacts__title">Контакты</h2>
-                <p class="contacts__text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-                <img class="contacts__map" src="" width="" height="" alt="г. Москва, ул. Строителей, 15">
-                <a class="button more-details" href="#write-us">Напишите нам</a>
-            </section>
+            <div class="index-columns">
+                <section class="about-us">
+                    <h2 class="about-us__title">О нас</h2>
+                    <p class="about-us__text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                    <p class="about-us__text">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+                    <ul class="about-us__transport-companies-list">
+                        <li class="about-us__transport-companie-item">Деловые Линии</li>
+                        <li class="about-us__transport-companie-item">Автотрейдинг</li>
+                        <li class="about-us__transport-companie-item">ЖелДорЭкспедиция</li>
+                    </ul>
+                    <a class="button more-details" href="#">Подробнее о нас</a>
+                </section>
+                <section class="contacts" id="contacts">
+                    <h2 class="contacts__title">Контакты</h2>
+                    <p class="contacts__text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+                    <img class="contacts__map" src="" width="" height="" alt="г. Москва, ул. Строителей, 15">
+                    <a class="button more-details" href="#write-us">Напишите нам</a>
+                </section>
+            </div>
         </main>
         <footer class="main-footer">
             <div class="footer-top">
